syntax = "proto3";

package go.micro.srv.login;

service Login {
    rpc Auth(AuthReq) returns (AuthResp) {}
    rpc LoginByJaccount(LJReq) returns (TokenResp) {}
    rpc LoginByUP(UPReq) returns (TokenResp) {}
    rpc LoginByWx(WxReq) returns (TokenResp) {}
    rpc GetAccessToken(CodeReq) returns (AccessResp) {}
    rpc GetJaccount(CodeReq) returns (JaccResp) {}
    rpc BindJwtAndJaccount(BindReq) returns (BindResp) {}
}

message JaccResp {
    string jaccount = 1;
}

message BindReq {
    string jwt = 1;
    string jaccount = 2;
}

message BindResp {
    int32 status = 12; // success = 0, error = 1, rebind = 2
}

message AccessResp {
    string access_token = 11;
}

message CodeReq {
    string redirect_uri = 9;
    string code = 10;
}


message AuthReq {
    string jwt = 1;
}

message AuthResp {
    int32 status = 1; // success = 0, expired = -1, error = -2
    int32 user_id = 2;
    bool admin = 3;
}

message LJReq {
    string access_token = 2;
}

message TokenResp {
    int32 status = 4;
    // uncaught error = -1, success = 0, incorrect = 1, access_token expired = 11, invalid jaccount = 12, need jaccount = 21 (weixin), need fill form = 22
    string jwt_token = 5;
}

message UPReq {
    string username = 3;
    string password = 4;
}

message WxReq {
    string code = 5;
}